--- a/html-example.html
+++ b/html-example.html
@@ -5,7 +5,7 @@
 <h1>HTML Webpage</h1>
 <p>
 "Link to more interesting example:"
-<a href="https://ruth-git.github.io/html-example.html">ruth-git.github.io/html-example.html</a>
+<a href="https://ruth-git.github.io/html-example.html">Ruth-git.github.io/html-example.html</a>
 </p>
 </div>
 <h2>A Header</h2>
